syntax = 'proto3';

package userproto;

service User {
  rpc getById (RequestObjectId) returns (Response) {}
  rpc getList (RequestCondition) returns (Response) {}
}

message RequestObjectId {
  string userId = 1;
}

message RequestCondition {
  string condition = 1;
}

message Response {
  string message = 1;
}
